--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -12,6 +12,10 @@
           "value": "GET, POST, PUT, DELETE, OPTIONS"
         },
         {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        },
+        {
           "key": "Access-Control-Allow-Credentials",
           "value": "true"
         }
